tests/baselines/reference/jsDeclarationsCrossfileMerge(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
index.js(4,1): error TS6232: Declaration augments declaration in another file. This cannot be serialized.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== index.js (1 errors) ====
    const m = require("./exporter");
    
    module.exports = m.default;
    module.exports.memberName = "thing";
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6232: Declaration augments declaration in another file. This cannot be serialized.
!!! related TS6233 exporter.js:1:10: This is the declaration being augmented. Consider moving the augmenting declaration into the same file.
    
==== exporter.js (0 errors) ====
    function validate() {}
    
    export default validate;
    